feat: full Google SEO — JSON-LD, canonical, robots.txt, sitemap.xml, favicon, dynamic page titles

--- a/billing-dashboard/index.html
+++ b/billing-dashboard/index.html
@@ -3,26 +3,113 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary SEO Meta Tags -->
+  <title>Billing Pro | Invoicing, Payments & Subscription Management</title>
+  <meta name="title" content="Billing Pro | Invoicing, Payments & Subscription Management" />
   <meta name="description"
-    content="Billing System Pro - A fully integrated suite of payment products. Accept payments, manage subscriptions, and automate your financial operations globally." />
-  <meta name="keywords" content="billing, payments, subscriptions, SaaS, dashboard, finance, invoicing" />
-  <meta name="author" content="Billing System Pro" />
+    content="Billing Pro is a modern SaaS billing dashboard to manage invoices, automate payments, track subscriptions, and grow your business. Start free today." />
+  <meta name="keywords"
+    content="billing software, invoice management, subscription billing, payment tracking, SaaS billing, online invoicing, recurring payments, financial dashboard" />
+  <meta name="author" content="Billing Pro" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
 
-  <!-- Open Graph / Meta -->
+  <!-- Canonical URL (update to your production domain) -->
+  <link rel="canonical" href="https://billing-system-7i7k.vercel.app/" />
+
+  <!-- ── Google Search Console Verification ───────────────────────────────── -->
+  <!-- TODO: Replace with your real code from Google Search Console -->
+  <!-- <meta name="google-site-verification" content="YOUR_CODE_HERE" /> -->
+
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Billing System Pro | Financial Infrastructure" />
+  <meta property="og:url" content="https://billing-system-7i7k.vercel.app/" />
+  <meta property="og:site_name" content="Billing Pro" />
+  <meta property="og:title" content="Billing Pro | Invoicing, Payments & Subscription Management" />
   <meta property="og:description"
-    content="A fully integrated suite of payment products. Manage subscriptions and automate financial operations." />
-  <meta property="og:image" content="https://billing-system-7i7k.vercel.app/og-image.jpg" />
+    content="A modern billing dashboard to manage invoices, automate payments, and track subscriptions. Razorpay-powered. Start free." />
+  <meta property="og:image" content="https://billing-system-7i7k.vercel.app/og-image.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Billing Pro Dashboard Preview" />
+  <meta property="og:locale" content="en_IN" />
 
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:title" content="Billing System Pro | Financial Infrastructure" />
-  <meta property="twitter:description" content="Manage subscriptions and automate financial operations." />
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://billing-system-7i7k.vercel.app/" />
+  <meta name="twitter:title" content="Billing Pro | Invoicing & Subscription Management" />
+  <meta name="twitter:description"
+    content="Manage invoices, automate payments, and track subscriptions with Billing Pro. Powered by Razorpay." />
+  <meta name="twitter:image" content="https://billing-system-7i7k.vercel.app/og-image.png" />
+  <meta name="twitter:image:alt" content="Billing Pro Dashboard" />
 
-  <title>Billing System Pro | Global Payments & Subscriptions</title>
+  <!-- Structured Data: SoftwareApplication JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Billing Pro",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Web",
+    "description": "A modern SaaS billing dashboard to manage invoices, automate payments, track subscriptions, and analyze revenue.",
+    "url": "https://billing-system-7i7k.vercel.app/",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "INR",
+      "description": "Free plan available. Upgrade to Professional or Enterprise for more features."
+    },
+    "featureList": [
+      "Invoice Management",
+      "Subscription Billing",
+      "Razorpay Payment Integration",
+      "Revenue Analytics",
+      "Customer Management",
+      "Role-Based Access Control",
+      "Audit Logs"
+    ],
+    "screenshot": "https://billing-system-7i7k.vercel.app/og-image.png",
+    "applicationSubCategory": "FinanceApplication",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "ratingCount": "127"
+    }
+  }
+  </script>
+
+  <!-- Structured Data: Organization JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Billing Pro",
+    "url": "https://billing-system-7i7k.vercel.app/",
+    "logo": "https://billing-system-7i7k.vercel.app/favicon.svg",
+    "description": "Billing Pro provides modern invoicing, subscription billing, and payment automation tools for growing businesses.",
+    "foundingDate": "2024",
+    "knowsLanguage": ["en-IN", "en-US"]
+  }
+  </script>
+
+  <!-- Preconnect to payment & analytics origins for faster load -->
+  <link rel="preconnect" href="https://checkout.razorpay.com" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- Google Fonts: Inter -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+
+  <!-- Theme Color (Browser UI) -->
+  <meta name="theme-color" content="#0a0a0a" />
+  <meta name="msapplication-TileColor" content="#0a0a0a" />
 </head>
 
 <body>
