feat: add Google Search Console verification meta tag

--- a/billing-dashboard/index.html
+++ b/billing-dashboard/index.html
@@ -24,8 +24,7 @@
   <link rel="canonical" href="https://billing-system-7i7k.vercel.app/" />
 
   <!-- ── Google Search Console Verification ───────────────────────────────── -->
-  <!-- TODO: Replace with your real code from Google Search Console -->
-  <!-- <meta name="google-site-verification" content="YOUR_CODE_HERE" /> -->
+  <meta name="google-site-verification" content="Zq6sPE-upRM3Nc8OZKXgpj68SOZBL5kUpXd0XPeGBuU" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
